fix(inline option side margin): by removing rb-input's margin and using rb-dropdown's
TODO: this spacing is still messed up in iOS safari.

--- a/src/client/styles/layout/host.scss
+++ b/src/client/styles/layout/host.scss
@@ -12,6 +12,7 @@
 	width: 100%;
 	margin-bottom: 25px;
 	display: inline-block;
+	rb-input { margin: 0; }
 }
 :host([inline]) {
 	width: auto;
